--- a/src/package.json
+++ b/src/package.json
@@ -4,22 +4,24 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "local": "node_modules/.bin/nodemon ./bin/www",
     "test": "jest"
   },
   "dependencies": {
-    "@slack/bolt": "^2.3.0",
-    "cookie-parser": "~1.4.4",
+    "@slack/bolt": "^2.4.0",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.4",
     "power-assert": "^1.6.1",
     "slack": "^11.0.2"
   },
   "devDependencies": {
-    "mocha": "^6.1.4"
+    "mocha": "^6.2.3"
   }
 }
