--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jest": "^24.9.0",
+    "moment": "^2.29.0",
+    "moment-timezone": "^0.5.31",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "power-assert": "^1.6.1",
